syntax = "proto3";

package echopb;

service Echo {
  rpc Echo(EchoRequest) returns (EchoResponse) {}
  rpc EchoBiDir(stream EchoRequest) returns (stream EchoResponse) {}
}

message EchoRequest {
  string input = 1;
}

message EchoResponse {
  string output = 1;
}

message Example1 {
  int64 int64_value = 1;
}

message Example2 {
  double float64_value = 1;
}
